--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -44,54 +44,100 @@
         </nav>
     </header>
     <main class="principalContacto">
-        <section class="formContacto">
-            <h4>Contactanos</h4>
-            <input class="controls" type="text" name="nombres" id="nombres" placeholder="Ingrese su Nombre">
-            <input class="controls" type="text" name="apellidos" id="apellidos" placeholder="Ingrese su Apellido">
-            <input class="controls" type="email" name="correo" id="correo" placeholder="Ingrese su Correo">
-            <input class="controls" type= "text" name="consulta" id="consulta" placeholder="Ingrese su Consulta">
-            <input class="boton1" type="submit" value="Enviar">
-        </section>
+        <div class="container"> 
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="well well-sm">
+                        <form class="form-horizontal" method="post">
+                            <fieldset>
+                                <legend class="text-center header">Contáctanos</legend>
+                                <div class="form-group">
+                                    <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-user bigicon"></i></span>
+                                        <div class="col-md-8">
+                                            <input id="fname" name="name" type="text" placeholder="Nombre" class="form-control">
+                                        </div>
+                                </div>
+                                <div class="form-group">
+                                    <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-user bigicon"></i></span>
+                                        <div class="col-md-8">
+                                            <input id="lname" name="name" type="text" placeholder="Apellido" class="form-control">
+                                        </div>
+                                </div>
+                                <div class="form-group">
+                                    <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-envelope-o bigicon"></i></span>
+                                        <div class="col-md-8">
+                                            <input id="email" name="email" type="text" placeholder="Email" class="form-control">
+                                        </div>
+                                </div>
+                                <div class="form-group">
+                                    <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-pencil-square-o bigicon"></i></span>
+                                        <div class="col-md-8">
+                                            <textarea class="form-control" id="message" name="message" placeholder="Escriba su mensaje" rows="7"></textarea>
+                                        </div>
+                                </div>
+                                <div class="form-group">
+                                    <div class="col-md-12 text-center">
+                                        <button type="submit" class="btn btn-primary btn-lg">Enviar</button>
+                                    </div>
+                                </div>
+                            </fieldset>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
-   <footer class="container-fluid barraFooter">
-      <div class="row">
-        <div class="col-lg-4 col-md-4 col-sm-4"> 
-          <div class="footer__contacto mt-5 d-flex flex-column align-items-start mx-5">
-            <div class="container tel__footer mb-2">
-              <i class="fa-solid fa-phone fa-2x"></i>
-               <p class="text-light mx-3">+54 385432345</p>
+    <footer class="site-footer">
+        <div class="container">
+            <div class="row mb-5">
+                <div class="col-md-3 mb-5">
+                    <h2>Sobre Nosotros</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod eveniet quia sit. 
+                    Voluptatem voluptate quisquam dolorem obcaecati eaque soluta possimus cumque dolor
+                    laudantium iure, at, ipsam, perspiciatis blanditiis magnam cupiditate!</p>
+                    <p><a href="">Accede para conocer más</a></p>
+                </div>
+                <div class="col-md-3 mb-5">
+                    <h2>Contacto &amp; Dirección</h2>
+                    <ul class="list-unstyled footer-link">
+                        <li class="d-flex">
+                            <span class="me-3">Dirección:</span> <span class="text-white"> 24 de Septiembre 262, Santiago Del Estero,
+                                Argentina</span>
+                        </li>
+                        <li class="d-flex">
+                            <span class="me-3">Teléfono:</span> <span class="text-white"> +54 385 4211784</span>
+                        </li>
+                        <li class="d-flex">
+                            <span class="me-3">Email:</span> <span class="text-white">info@gogaucho.com.ar</span>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-md-3 mb-5">
+                    <h2>Accesos rápidos</h2>
+                    <ul class="list-unstyled footer-link">
+                        <li><a href="./servicios.html">Servicios</a></li>
+                        <li><a href="./usuarios.html">Usuarios</a></li>
+                        <li><a href="./conviertete-en-gaucho.html">Nuestros Gauchos</a></li>
+                        <li><a href="../Index.html">Inicio</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-3">
+                    <h2>Nuestras redes sociales</h2>
+                    <ul class="list-unstyled footer-link d-flex footer-social">
+                        <li><a href="#"><span class="fa fa-facebook"></span></a></li>
+                        <li><a href="#"><span class="fa fa-twitter"></span></a></li>
+                        <li><a href="#"><span class="fa fa-instagram"></span></a></li>
+                        <li><a href="#"><span class="fa fa-linkedin"></span></a></li>
+                        <li><a href="#"><span class="fa fa-youtube"></span></a></li>
+                    </ul>
+                </div>
             </div>
-            <div class="container dir__footer">
-              <i class="fa-solid fa-location-dot fa-2x"></i>
-              <p class="text-light mx-3"> 9 De Julio 1785 <br> Sgo Del Est, Arg</p>
+            <div class="row">
+                <div class="col-12 text-md-center text-left">
+                    <p>Este sitio está hecho con <i class="fa fa-heart-o"></i> por Aventura Digital 2022</p>
+                </div>
             </div>
-    
-          </div>
-        </div>
-        <div class="col-lg-4 col-md-4 col-sm-12">
-          <div class="contenedorMigas mt-5">
-            <a class="migas" aria-current="page" href="../Index.html">Inicio</a>
-            <a class="migas" href="../paginas/servicios.html">Servicios</a>
-            <a class="migas" href="../paginas/usuarios.html">Usuarios</a>
-            <a class="migas" href="../paginas/conviertete-en-gaucho.html">Conviértete en Gaucho</a>
-            <a class="migas" href="../paginas/contacto.html">Contacto</a> 
-          </div>
-        </div>
-        <div class="col-lg-4 col-md-4 col-sm-12 redsocial">
-          <div class="mt-5">
-            <a href="https://www.facebook.com/mipagina" target="_blank">
-                <img src="../imagenes/facebook.png" alt="Logo Facebook" class=""> 
-            </a> 
-            <a href="https://www.instagram.com/mipagina" target="_blank"> 
-              <img src="../imagenes/instagram.png" alt="Logo Instagram">
-            </a>
-            <a href="https://www.youtube.com/micanal" target="_blank">
-                <img src="../imagenes/youtube.png" alt="Logo Youtube">    
-            </a>
-          </div>
-        </div>
-        <div class="contenedor">
-          <p class="fs-6 copy"> © 2022 Go Gaucho | Todos los derechos reservados.</p>
+
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
